--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,15 +10,17 @@ AllCops:
 Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
-  Max: 20
+  Max: 140
 Metrics/AbcSize:
   Max: 50
 Metrics/ClassLength:
   Max: 150
+Metrics/CyclomaticComplexity:
+  Max: 15
 Metrics/BlockLength:
   IgnoredMethods: ['describe']
-  Max: 30
-
+  Max: 60
+  
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
